--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,11 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module"
   },
   "parser": "babel-eslint",
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "globals": {
     "console": true,
     "document": true,
@@ -23,10 +18,6 @@
     "window": true
   },
   "rules": {
-    "arrow-parens": [
-      2,
-      "as-needed"
-    ],
     "arrow-spacing": 2,
     "comma-dangle": [
       2,
@@ -38,31 +29,12 @@
         "functions": "never"
       }
     ],
-    "indent": [
-      2,
-      2
-    ],
-    "jsx-quotes": [
-      2,
-      "prefer-double"
-    ],
+    "indent": [2, 2],
+    "jsx-quotes": [2, "prefer-double"],
     "no-multi-spaces": 2,
     "prefer-arrow-callback": 2,
-    "quotes": [
-      2,
-      "single"
-    ],
-    "semi": [
-      2,
-      "never"
-    ],
-    "space-before-blocks": [
-      2,
-      "always"
-    ],
-    "space-before-function-paren": [
-      2,
-      "never"
-    ]
+    "quotes": [2, "single"],
+    "semi": [2, "never"],
+    "space-before-blocks": [2, "always"]
   }
 }
